# DummyPlayer

./: CMakeLists.txt  README.md  make.sh
protoc/: info.proto
src/: cal.py  controller.cpp  controller.h  count.awk  exception.h  log.h  main.cpp  player.cpp  player.h  userInfoManager.cpp  userInfoManager.h
src/proto/: info.pb.cc  info.pb.h
